rename search.html->dfs-bfs.html; 扁平化尝试用循环代替递归

--- a/test-code/6.dfs-bfs.html
+++ b/test-code/6.dfs-bfs.html
@@ -39,7 +39,7 @@
       return arr
     }
 
-    console.log( dfs(root).join() )
+    console.log('dfs', dfs(root).join())
 
     // 广度优先
     function bfs(node) {
@@ -55,7 +55,16 @@
       return arr
     }
 
-    console.log( bfs(root).join() )
+    console.log('bfs', bfs(root).join())
+
+    function getDepth(node) {
+      let top = [node]
+      let depth = 1
+      
+      return depth
+    }
+
+    console.log('depth', getDepth(node))
   
   </script>
 </body>
